--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ httpx==0.25.1
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
+instructor==0.3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 minio==7.2.0
 nest-asyncio==1.5.8
 numpy==1.26.1
+openai==1.3.3
 orjson==3.9.10
 packaging==23.2
 pandas==2.1.2
